crates/nash-report/tests/solve/snapshots/solve__inference__superclass_context_satisfies_an_annotated_body.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 1152
description: "Code:\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\ntrait Keep 'a => Strong 'a where\n    strong : 'a -> 'a\npresent : Strong 'a => 'a -> 'a\npresent x = keep x\n"
---
present : forall a. Strong a => a -> a
