crates/nash-report/tests/solve/snapshots/solve__inference__transparent_wrappers_preserve_distinct_record_identity.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2403
description: "module Main exposing (..)\ntype alias point = { x : int }\ntype alias other = { x : int }\ntype alias wrapped = point\ntype alias wrappedOther = other\nf : wrapped -> wrappedOther\nf r = r\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `wrappedOther`, found `wrapped`.
   ╭─[Main.nash:7:7]
 5 │ type alias wrappedOther = other
 6 │ f : wrapped -> wrappedOther
   ·     ───────────┬───────────
   ·                ╰── declared type
 7 │ f r = r
   ·       ┬
   ·       ╰── body of `f`
   ╰────
