crates/nash-report/tests/solve/snapshots/solve__inference__tuple_arity_mismatch.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 1999
description: "module Main exposing (..)\nvalue : (unit, unit, unit, unit)\nvalue = ((), (), (), (), ())\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( unit, unit, unit, unit )`,
  │ found `( unit, unit, unit, unit, unit )`.
   ╭─[Main.nash:3:9]
 1 │ module Main exposing (..)
 2 │ value : (unit, unit, unit, unit)
   ·         ────────────┬───────────
   ·                     ╰── declared type
 3 │ value = ((), (), (), (), ())
   ·         ──────────┬─────────
   ·                   ╰── body of `value`
   ╰────
