crates/nash-report/tests/solve/snapshots/solve__inference__tuple_pattern_arg.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2277
description: "Code:\n\nmodule Main exposing (swap)\n\nswap ( a, b ) = ( b, a )\n"
---
swap : forall a b. ( a, b ) -> ( b, a )
