crates/nash-report/tests/solve/snapshots/solve__inference__tuple_tail_occurs_check.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2010
description: "module Main exposing (..)\nloop x = x ((), (), (), x)\n"
info: diagnostic
---
nash::type::infinite_type

  × `x` has a self-referential type: ( unit, unit, unit, ∞ ) -> 'a
   ╭─[Main.nash:2:6]
 1 │ module Main exposing (..)
 2 │ loop x = x ((), (), (), x)
   ·      ─
   ╰────
  help: Break the type cycle; ∞ marks a repeated part of the type.
