crates/nash-report/tests/solve/snapshots/solve__inference__twin_constructor_does_not_follow_the_expected_type.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 1961
description: "module Main exposing (..)\ntype status = Ready\ntype Status = Ready\nwrong : Status\nwrong = Ready\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `Status`, found `status`.
   ╭─[Main.nash:5:9]
 3 │ type Status = Ready
 4 │ wrong : Status
   ·         ───┬──
   ·            ╰── declared type
 5 │ wrong = Ready
   ·         ──┬──
   ·           ╰── body of `wrong`
   ╰────
